--- a/tea.html
+++ b/tea.html
@@ -85,7 +85,7 @@
                     <div style="text-align: center;">
                         <div style="font-size: 3em;">🫖🚫</div>
                         <div class="message" style="color: #ff4444;">"Иди и ищи кофеварку. Или турку."</div>
-                        <div>Чайник проявил характер и отказался!</div>
+                        <div>Чайник проявил характер и отказался!!</div>
                         <div class="crypto-status">Crypto-рандомизация: ${randomValue.toFixed(4)} ≤ 0.5</div>
                         <button onclick="location.reload()" style="margin-top: 20px; background: #ff4444; color: #000; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer;">Принять судьбу</button>
                     </div>
