--- a/music-player.html
+++ b/music-player.html
@@ -104,7 +104,7 @@
         
         .progress-bar {
             height: 100%;
-            background: linear-gradient(90deg, #000000, #00ff88);
+            background: linear-gradient(90deg, #4bb379, #00ff88);
             border-radius: 3px;
             width: 0%;
             transition: width 0.1s ease;
