--- a/451.html
+++ b/451.html
@@ -143,6 +143,7 @@
         </div>
         
         <a href="index.html" class="home-btn">>_ НА ГЛАВНУЮ</a>
+        <a href="rules.html" class="home-btn">>_НА ПРЕДЫДУЩУЮ</a>
     </div>
 
     <audio id="errorSound" autoplay>
