--- a/admin-panel.html
+++ b/admin-panel.html
@@ -36,7 +36,7 @@
         }
 
         .login-form input {
-            background: #000;
+            background: #008800;
             color: #00ff00;
             border: 1px solid #00ff00;
             padding: 10px;
@@ -46,7 +46,7 @@
         }
 
         .login-form button {
-            background: #00ff00;
+            background: #00c200;
             color: #000;
             border: none;
             padding: 10px 20px;
@@ -58,7 +58,7 @@
         }
 
         .login-form button:hover {
-            background: #00cc00;
+            background: #00f000;
         }
 
         .error-message {
