--- a/401.html
+++ b/401.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>401 - Кто ты такой?</title>
+    <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         body {
             background: #0a0a0a;
