--- a/403.html
+++ b/403.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <title>403 - Не лезь!</title>
-    <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="logo.jpeg" type="image/jpeg">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap');
         body {
             background: #0a0a0a;
             color: #ffaa00;
