--- a/451.html
+++ b/451.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>451 Unavailable For Legal Reasons</title>
-    <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="logo.jpeg" type="image/jpeg">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap');
         body {
             margin: 0;
             padding: 0;
