--- a/404.html
+++ b/404.html
@@ -4,9 +4,9 @@
     <title>404 - Потерялось</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="icon" href="logo.jpeg" type="image/jpeg">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap');
         body {
             background: #0a0a0a;
             color: #00ff88;
