--- a/451.html
+++ b/451.html
@@ -6,9 +6,9 @@
     <title>451 Unavailable For Legal Reasons</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="icon" href="logo.jpeg" type="image/jpeg">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap');
         body {
             margin: 0;
             padding: 0;
