--- a/500.html
+++ b/500.html
@@ -15,8 +15,16 @@
             padding: 50px;
         }
         h1 {
-            font-size: 3em;
-            text-shadow: 0 0 10px #ff0000;
+            font-size: 3rem;
+            font-weight: 800;
+            margin: 2rem 0;
+            text-transform: uppercase;
+            letter-spacing: 5px;
+            color: #ff0000;
+            text-shadow: 0 0 10px #bd2a2a;
+            opacity: 0;
+            transform: translateY(-20px);
+            transition: opacity 0.8s ease, transform 0.8s ease;
         }
         .message {
             font-size: 1.5em;
