--- a/420.html
+++ b/420.html
@@ -33,12 +33,16 @@
         }
         
         h1 {
-            font-size: 4em;
-            margin: 0;
-            color: #00ff00;
-            text-shadow: 0 0 15px #00ff00;
-            font-weight: 700;
-            letter-spacing: 2px;
+            font-size: 3rem;
+            font-weight: 800;
+            margin: 2rem 0;
+            text-transform: uppercase;
+            letter-spacing: 5px;
+            color: #00ff88;
+            text-shadow: 0 0 10px #00ff00;
+            opacity: 0;
+            transform: translateY(-20px);
+            transition: opacity 0.8s ease, transform 0.8s ease;
         }
         
         .status-code {
