Font update undo

--- a/401.html
+++ b/401.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>401 - Кто ты такой?</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="icon" href="logo.jpeg" type="image/jpeg">
+    <title>401 - Кто ты, воин?</title>
     <style>
         body {
             background: #0a0a0a;
@@ -15,16 +11,8 @@
             padding: 50px;
         }
         h1 {
-            font-size: 3rem;
-            font-weight: 800;
-            margin: 2rem 0;
-            text-transform: uppercase;
-            letter-spacing: 5px;
-            color: #ff0000;
-            text-shadow: 0 0 10px #ff5b5b;
-            opacity: 0;
-            transform: translateY(-20px);
-            transition: opacity 0.8s ease, transform 0.8s ease;
+            font-size: 3em;
+            text-shadow: 0 0 10px #ff0000;
         }
         .message {
             font-size: 1.5em;
@@ -35,8 +23,8 @@
 </head>
 <body>
     <h1>401 - Ты кто такой?</h1>
-    <div class="message">Я тебя не звал - иди на... стоп, без матов</div>
-    <div class="message">Я тебя не знаю - представься сначала!</div>
+    <div class="message">Я тебя не звал - иди отсюда!</div>
+    <div class="message">А хотя... ладно, только представься сначала!</div>
     <div style="font-size: 3em;">🚫👤❓</div>
 
     <audio id="errorSound" autoplay>
