--- a/403.html
+++ b/403.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>403 - Не лезь!</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="icon" href="logo.jpeg" type="image/jpeg">
+    <title>403 - Иди своей дорогой, Сталкер.</title>
     <style>
         body {
             background: #0a0a0a;
@@ -15,16 +11,8 @@
             padding: 50px;
         }
         h1 {
-            font-size: 3rem;
-            font-weight: 800;
-            margin: 2rem 0;
-            text-transform: uppercase;
-            letter-spacing: 5px;
-            color: #ff8800;
-            text-shadow: 0 0 10px #d37f1f;
-            opacity: 0;
-            transform: translateY(-20px);
-            transition: opacity 0.8s ease, transform 0.8s ease;
+            font-size: 3em;
+            text-shadow: 0 0 10px #ff8800;
         }
         .message {
             font-size: 1.5em;
@@ -36,7 +24,7 @@
 <body>
     <h1>403 - Не лезь туда!</h1>
     <div class="message">Это тебе не надо</div>
-    <div class="message">Иди своей дорогой, сталкер</div>
+    <div class="message">Иди своей дорогой, Сталкер</div>
     <div style="font-size: 3em;">🚧👀🚫</div>
 
     <audio id="errorSound" autoplay>
