--- a/404.html
+++ b/404.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>404 - Потерялось</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="icon" href="logo.jpeg" type="image/jpeg">
+    <title>404 - Я кто? Я что? Я?</title>
     <style>
         body {
             background: #0a0a0a;
@@ -15,16 +11,8 @@
             padding: 50px;
         }
         h1 {
-            font-size: 3rem;
-            font-weight: 800;
-            margin: 2rem 0;
-            text-transform: uppercase;
-            letter-spacing: 5px;
-            color: #00ff88;
-            text-shadow: 0 0 10px rgba(0, 255, 136, 0.5);
-            opacity: 0;
-            transform: translateY(-20px);
-            transition: opacity 0.8s ease, transform 0.8s ease;
+            font-size: 3em;
+            text-shadow: 0 0 10px #00ff88;
         }
         .message {
             font-size: 1.5em;
@@ -34,9 +22,9 @@
     </style>
 </head>
 <body>
-    <h1>404 - Тут пусто</h1>
-    <div class="message">Страница сбежала</div>
-    <div class="message">Ищи в другом месте</div>
+    <h1>404 - Тут ничего нет. Совсем.</h1>
+    <div class="message">Не ругайся насяльника!</div>
+    <div class="message">Оно само сбежало, мы ни причём!</div>
     <div style="font-size: 3em;">👻🔍🚶‍♂️</div>
 
     <audio id="errorSound" autoplay>
