--- a/price-list.html
+++ b/price-list.html
@@ -495,6 +495,7 @@
             <div class="track-item" data-track="music/BassCover-Hoist_the_Colours.mp3" data-name="BassCover - Hoist the Colours">Hoist the Colours (BassCover, Hans Zimmer)</div>
             <div class="track-item" data-track="music/C418-Area_Math.mp3" data-name="C418 - Area Math">Area Math (C418, Minecraft)</div>
             <div class="track-item" data-track="music/C418-Wet_Hands.mp3" data-name="C418 - Wet Hands">Wet Hands (C418, Minecraft)</div>
+            <div class="track-item" data-track="music/Contraption.mp3" data-name="Timofey Yakubov - C0NTR4P710N">Contraption (Timofey Yakubov)</div>
             <div class="track-item" data-track="music/Dyan_Dxxdy-Cute_Depressed.mp3" data-name="Dyan Dxxdy - Cute Depressed">Cute Depressed (Dyan Dxxdy)</div>
             <div class="track-item" data-track="music/Dyan_Dxxdy-Cute_Depressed_Slowed.mp3" data-name="Dyan Dxxdy - Cute Depressed (Slowed)">Cute Depressed (Slowed) (Dyan Dxxdy)</div>
             <div class="track-item" data-track="music/Imagine_Dragons-Believer.mp3" data-name="Imagine Dragons - Believer">Believer (Imagine Dragons)</div>
@@ -505,6 +506,7 @@
             <div class="track-item" data-track="music/Korol_i_Shut-Kukla_Kolduna.mp3" data-name="Король и Шут - Кукла колдуна">Кукла колдуна (Король и Шут)</div>
             <div class="track-item" data-track="music/Korol_i_Shut-Prygnu_so_Skaly.mp3" data-name="Король и Шут - Прыгну со скалы">Прыгну со скалы (Король и Шут)</div>
             <div class="track-item" data-track="music/Lubeh-Horse.mp3" data-name="Любэ - Конь">Конь (Любэ)</div>
+            <div class="track-item" data-track="music/Manowar-Warriors_of_the_World.mp3" data-name="Manowar - Warriors of the World">Warriors of the World (Manowar)</div>
             <div class="track-item" data-track="music/Mission_Impossible-Main_Theme.mp3" data-name="Mission Impossible (Main Theme)">Main theme from Mission Impossible</div>
             <div class="track-item" data-track="music/ReLogic-Alternate_Day.mp3" data-name="Re-Logic - Alternate Day">Alternate Day (Re-Logic, Terraria)</div>
             <div class="track-item" data-track="music/ReLogic-Dungeon.mp3" data-name="Re-Logic - Dungeon">Dungeon (Re-Logic, Terraria)</div>
