--- a/admin-panel.html
+++ b/admin-panel.html
@@ -656,14 +656,19 @@
 
         function show403Error() {
             console.log('🚫 Пользователь не админ - 403');
+            
+            // Вместо показа текста делаем редирект на 403.html
+            setTimeout(() => {
+                window.location.href = '403.html';
+            }, 1500); // небольшая задержка чтобы видно было сообщение
+            
+            // Показываем сообщение перед редиректом
             document.body.innerHTML = `
                 <div style="text-align: center; padding: 100px; color: #ff4444;">
                     <h1 style="font-size: 3em;">403</h1>
                     <h2>Доступ запрещен</h2>
                     <p>У вас недостаточно прав для доступа к админ-панели</p>
-                    <button onclick="logoutSupabase()" style="margin-top: 20px; padding: 10px 20px; background: #ff4444; color: white; border: none; border-radius: 5px; cursor: pointer;">
-                        Выйти
-                    </button>
+                    <p style="color: #8fd493; margin-top: 20px;">Перенаправление на страницу 403...</p>
                 </div>
             `;
         }
