--- a/403.html
+++ b/403.html
@@ -25,6 +25,8 @@
     <h1>403 - Не лезь туда!</h1>
     <div class="message">Это тебе не надо</div>
     <div class="message">Иди своей дорогой, Сталкер</div>
+    <div class="message">Ну, или авторизуйся, Сидорович.</div>
+    <div class="message">Говорю сразу: скорее всего это место только для админов</div>
     <div style="font-size: 3em;">🚧👀🚫</div>
 
     <audio id="errorSound" autoplay>
