--- a/admin-panel.html
+++ b/admin-panel.html
@@ -430,18 +430,21 @@
         <div class="section">
             <h2>Pages</h2>
             <div class="buttons-grid">
-                <button class="btn" onclick="checkPage('index.html')">index.html</button>
-                <button class="btn" onclick="checkPage('music-player.html')">music-player.html</button>
-                <button class="btn" onclick="checkPage('price-list.html')">price-list.html</button>
-                <button class="btn" onclick="checkPage('rules.html')">rules.html</button>
-                <button class="btn" onclick="checkPage('tea.html')">tea.html</button>
-                <button class="btn" onclick="checkPage('upd-form.html')">upd-form.html</button>
                 <button class="btn" onclick="checkPage('401.html')">401.html</button>
                 <button class="btn" onclick="checkPage('403.html')">403.html</button>
                 <button class="btn" onclick="checkPage('404.html')">404.html</button>
                 <button class="btn" onclick="checkPage('420.html')">420.html</button>
                 <button class="btn" onclick="checkPage('451.html')">451.html</button>
                 <button class="btn" onclick="checkPage('500.html')">500.html</button>
+                <button class="btn" onclick="checkPage('booking.html')">booking.html</button>
+                <button class="btn" onclick="checkPage('index.html')">index.html</button>
+                <button class="btn" onclick="checkPage('login.html')">login.html</button>
+                <button class="btn" onclick="checkPage('music-player.html')">music-player.html</button>
+                <button class="btn" onclick="checkPage('price-list.html')">price-list.html</button>
+                <button class="btn" onclick="checkPage('register.html')">register.html</button>
+                <button class="btn" onclick="checkPage('rules.html')">rules.html</button>
+                <button class="btn" onclick="checkPage('tea.html')">tea.html</button>
+                <button class="btn" onclick="checkPage('upd-form.html')">upd-form.html</button>
             </div>
         </div>
 
@@ -459,6 +462,7 @@
                 <button class="btn" onclick="checkBackground('background/background8.jpg')">background8.jpg</button>
                 <button class="btn" onclick="checkBackground('background/background9.jpg')">background9.jpg</button>
                 <button class="btn" onclick="checkBackground('background/background10.jpg')">background10.jpg</button>
+                <button class="btn" onclick="checkBackground('background/backfround11')">background11.jpg</button>
             </div>
         </div>
 
