Remove bugs in Grande Update

--- a/admin-panel.html
+++ b/admin-panel.html
@@ -462,7 +462,7 @@
                 <button class="btn" onclick="checkBackground('background/background8.jpg')">background8.jpg</button>
                 <button class="btn" onclick="checkBackground('background/background9.jpg')">background9.jpg</button>
                 <button class="btn" onclick="checkBackground('background/background10.jpg')">background10.jpg</button>
-                <button class="btn" onclick="checkBackground('background/backfround11')">background11.jpg</button>
+                <button class="btn" onclick="checkBackground('background/backfround11.jpg')">background11.jpg</button>
             </div>
         </div>
 
