опять. эти. БАГИ!

--- a/register.html
+++ b/register.html
@@ -267,7 +267,7 @@
                 
                 if (data.user && !data.session) {
                     // Требуется подтверждение email
-                    showSuccess('✅ Регистрация успешна! Проверьте email для подтверждения. Если Вас перенаправляет на localhost:3000, то всё правильно, и аккаунт подтверждён.');
+                    showSuccess('✅ Регистрация успешна! Проверьте email для подтверждения.');
                     
                     // Очищаем форму
                     document.getElementById('registerForm').reset();
