--- a/admin-panel.html
+++ b/admin-panel.html
@@ -434,6 +434,16 @@
             </div>
         </div>
 
+        <!-- Fast Links Section-->
+        <div class="section">
+            <h2>Fast Links</h2>
+            <div class="buttons-grid">
+                <button class="btn" onclick="window.location.href='booking.html'">Booking</button>
+                <button class="btn" onclick="window.location.href='psswrd-chngr.html'">Password Changer</button>
+
+            </div>
+        </div>
+
         <!-- Pages Section -->
         <div class="section">
             <h2>Pages</h2>
@@ -449,6 +459,7 @@
                 <button class="btn" onclick="checkPage('login.html')">login.html</button>
                 <button class="btn" onclick="checkPage('music-player.html')">music-player.html</button>
                 <button class="btn" onclick="checkPage('price-list.html')">price-list.html</button>
+                <button class="btn" onclick="checkPage('psswrd-chngr.html')">psswrd-chngr.html</button>
                 <button class="btn" onclick="checkPage('register.html')">register.html</button>
                 <button class="btn" onclick="checkPage('rules.html')">rules.html</button>
                 <button class="btn" onclick="checkPage('tea.html')">tea.html</button>
