--- a/admin-panel.html
+++ b/admin-panel.html
@@ -101,6 +101,7 @@
             <button class="btn" onclick="checkPage('500.html')">500.html</button>
             <button class="btn" onclick="checkPage('booking.html')">booking.html</button>
             <button class="btn" onclick="checkPage('index.html')">index.html</button>
+            <button class="btn" onclick="checkPage('leaderboard.html')">leaderboard.html</button>
             <button class="btn" onclick="checkPage('login.html')">login.html</button>
             <button class="btn" onclick="checkPage('music-player.html')">music-player.html</button>
             <button class="btn" onclick="checkPage('price-list.html')">price-list.html</button>
