remove Email from UserTable

--- a/admin-panel.html
+++ b/admin-panel.html
@@ -493,7 +493,7 @@
                 return;
             }
             
-            let html = '<table class="data-table"><thead><tr><th>ID</th><th>Email</th><th>Username</th><th>Тип</th><th>Создан</th><th>Обновлен</th><th>Действия</th></tr></thead><tbody>';
+            let html = '<table class="data-table"><thead><tr><th>ID</th><th>Username</th><th>Тип</th><th>Создан</th><th>Обновлен</th><th>Действия</th></tr></thead><tbody>';
             
             profiles.forEach(profile => {
                 const shortId = profile.id ? profile.id.substring(0, 8) + '...' : 'N/A';
