--- a/admin-panel.html
+++ b/admin-panel.html
@@ -82,51 +82,73 @@
             <div style="margin-bottom: 30px;"><h3>📅 Бронирования (bookings)</h3><input type="text" class="search-box" id="searchBookings" placeholder="Поиск по телефону, email или ID..." onkeyup="searchBookings()"><div id="bookingsTable"></div><div class="pagination" id="bookingsPagination"></div></div>
             <div><h3>👥 Пользователи</h3><input type="text" class="search-box" id="searchUsers" placeholder="Поиск по email или username..." onkeyup="searchUsers()"><div id="usersTable"></div><div class="pagination" id="usersPagination"></div></div>
         </div>
-        <div class="section"><h2>Sounds</h2><div class="buttons-grid">
-            <button class="btn" onclick="playSound('err_snds/HTML200.mp3')">HTML200</button>
-            <button class="btn" onclick="playSound('err_snds/HTML401.mp3')">HTML401</button>
-            <button class="btn" onclick="playSound('err_snds/HTML403.mp3')">HTML403</button>
-            <button class="btn" onclick="playSound('err_snds/HTML404.mp3')">HTML404</button>
-            <button class="btn" onclick="playSound('err_snds/HTML420.mp3')">HTML420</button>
-            <button class="btn" onclick="playSound('err_snds/HTML451.mp3')">HTML451</button>
-            <button class="btn" onclick="playSound('err_snds/HTML500.mp3')">HTML500</button>
-            <button class="btn" onclick="playSound('err_snds/HTML502.mp3')">HTML502</button>
-        </div></div>
-        <div class="section"><h2>Pages</h2><div class="buttons-grid">
-            <button class="btn" onclick="checkPage('401.html')">401.html</button>
-            <button class="btn" onclick="checkPage('403.html')">403.html</button>
-            <button class="btn" onclick="checkPage('404.html')">404.html</button>
-            <button class="btn" onclick="checkPage('420.html')">420.html</button>
-            <button class="btn" onclick="checkPage('451.html')">451.html</button>
-            <button class="btn" onclick="checkPage('500.html')">500.html</button>
-            <button class="btn" onclick="checkPage('booking.html')">booking.html</button>
-            <button class="btn" onclick="checkPage('index.html')">index.html</button>
-            <button class="btn" onclick="checkPage('leaderboard.html')">leaderboard.html</button>
-            <button class="btn" onclick="checkPage('login.html')">login.html</button>
-            <button class="btn" onclick="checkPage('music-player.html')">music-player.html</button>
-            <button class="btn" onclick="checkPage('price-list.html')">price-list.html</button>
-            <button class="btn" onclick="checkPage('register.html')">register.html</button>
-            <button class="btn" onclick="checkPage('rules.html')">rules.html</button>
-            <button class="btn" onclick="checkPage('tea.html')">tea.html</button>
-            <button class="btn" onclick="checkPage('upd-form.html')">upd-form.html</button>
-        </div></div>
-        <div class="section"><h2>Quick Links</h2><div class="buttons-grid">
-            <button class="btn" onclick="window.location.href='booking.html'">Booking</button>
-            <button class="btn" onclick="window.location.href='psswrd-chngr.html'">Password Changer</button>
-        </div></div>
-        <div class="section"><h2>Background</h2><div class="buttons-grid">
-            <button class="btn" onclick="checkBackground('background/background1.jpg')">background1.jpg</button>
-            <button class="btn" onclick="checkBackground('background/background2.jpg')">background2.jpg</button>
-            <button class="btn" onclick="checkBackground('background/background3.jpg')">background3.jpg</button>
-            <button class="btn" onclick="checkBackground('background/background4.jpg')">background4.jpg</button>
-            <button class="btn" onclick="checkBackground('background/background5.jpg')">background5.jpg</button>
-            <button class="btn" onclick="checkBackground('background/background6.jpg')">background6.jpg</button>
-            <button class="btn" onclick="checkBackground('background/background7.jpg')">background7.jpg</button>
-            <button class="btn" onclick="checkBackground('background/background8.jpg')">background8.jpg</button>
-            <button class="btn" onclick="checkBackground('background/background9.jpg')">background9.jpg</button>
-            <button class="btn" onclick="checkBackground('background/background10.jpg')">background10.jpg</button>
-            <button class="btn" onclick="checkBackground('background/background11.jpg')">background11.jpg</button>
-        </div></div>
+        <div class="section">
+            <h2>Sounds</h2>
+            <div class="buttons-grid">
+                <button class="btn" onclick="playSound('err_snds/HTML200.mp3')">HTML200</button>
+                <button class="btn" onclick="playSound('err_snds/HTML401.mp3')">HTML401</button>
+                <button class="btn" onclick="playSound('err_snds/HTML403.mp3')">HTML403</button>
+                <button class="btn" onclick="playSound('err_snds/HTML404.mp3')">HTML404</button>
+                <button class="btn" onclick="playSound('err_snds/HTML420.mp3')">HTML420</button>
+                <button class="btn" onclick="playSound('err_snds/HTML451.mp3')">HTML451</button>
+                <button class="btn" onclick="playSound('err_snds/HTML500.mp3')">HTML500</button>
+                <button class="btn" onclick="playSound('err_snds/HTML502.mp3')">HTML502</button>
+                <button class="btn" onclick="playSound('sounds/boil.mp3')">boil</button>
+                <button class="btn" onclick="playSound('sounds/quantum.mp3')">quantum</button>
+                <button class="btn" onclick="playSound('sounds/success.mp3')">success</button>
+            </div>
+        </div>
+        <div class="section">
+            <h2>Pages</h2>
+            <div class="buttons-grid">
+                <button class="btn" onclick="checkPage('401.html')">401.html</button>
+                <button class="btn" onclick="checkPage('403.html')">403.html</button>
+                <button class="btn" onclick="checkPage('404.html')">404.html</button>
+                <button class="btn" onclick="checkPage('420.html')">420.html</button>
+                <button class="btn" onclick="checkPage('451.html')">451.html</button>
+                <button class="btn" onclick="checkPage('500.html')">500.html</button>
+                <button class="btn" onclick="checkPage('booking.html')">booking.html</button>
+                <button class="btn" onclick="checkPage('index.html')">index.html</button>
+                <button class="btn" onclick="checkPage('leaderboard.html')">leaderboard.html</button>
+                <button class="btn" onclick="checkPage('login.html')">login.html</button>
+                <button class="btn" onclick="checkPage('music-player.html')">music-player.html</button>
+                <button class="btn" onclick="checkPage('price-list.html')">price-list.html</button>
+                <button class="btn" onclick="checkPage('register.html')">register.html</button>
+                <button class="btn" onclick="checkPage('rules.html')">rules.html</button>
+                <button class="btn" onclick="checkPage('tea.html')">tea.html</button>
+                <button class="btn" onclick="checkPage('upd-form.html')">upd-form.html</button>
+            </div>
+        </div>
+        <div class="section">
+            <h2>Quick Links</h2>
+            <div class="buttons-grid">
+                <button class="btn" onclick="window.location.href='booking.html'">Booking</button>
+                <button class="btn" onclick="window.location.href='psswrd-chngr.html'">Password Changer</button>
+            </div>
+        </div>
+        <div class="section">
+            <h2>Background</h2>
+            <div class="buttons-grid">
+                <button class="btn" onclick="checkBackground('background/background1.jpg')">background1.jpg</button>
+                <button class="btn" onclick="checkBackground('background/background2.jpg')">background2.jpg</button>
+                <button class="btn" onclick="checkBackground('background/background3.jpg')">background3.jpg</button>
+                <button class="btn" onclick="checkBackground('background/background4.jpg')">background4.jpg</button>
+                <button class="btn" onclick="checkBackground('background/background5.jpg')">background5.jpg</button>
+                <button class="btn" onclick="checkBackground('background/background6.jpg')">background6.jpg</button>
+                <button class="btn" onclick="checkBackground('background/background7.jpg')">background7.jpg</button>
+                <button class="btn" onclick="checkBackground('background/background8.jpg')">background8.jpg</button>
+                <button class="btn" onclick="checkBackground('background/background9.jpg')">background9.jpg</button>
+                <button class="btn" onclick="checkBackground('background/background10.jpg')">background10.jpg</button>
+                <button class="btn" onclick="checkBackground('background/background11.jpg')">background11.jpg</button>
+            </div>
+        </div>
+        <div class="section">
+            <h2>Others</h2>
+            <div class="buttons-grid">
+                <button class="btn" onclick="checkPage('logo.jpeg')">logo.jpeg check</button>
+                 <button class="btn" onclick="checkPage('favicon.ico')">favicon.ico check</button>
+            </div>
+        </div>
         <div class="section">
             <h2>Music</h2>
             <div class="playlist">
@@ -160,7 +182,11 @@
                 <div class="track-item" data-track="music/Star_Wars-The_Imperial_March.mp3" data-name="Star Wars - The Imperial March">The Imperial March (Star Wars)</div>
                 <div class="track-item" data-track="music/WW-OIIA_Cat.mp3" data-name="W&W - OIIA Cat">OIIA Cat (W&W)</div>
             </div>
-            <div class="music-controls"><button onclick="playMusic()">▶️ Воспроизвести</button><button onclick="pauseMusic()">⏸️ Пауза</button><button onclick="stopMusic()">⏹️ Стоп</button></div>
+            <div class="music-controls">
+                <button onclick="playMusic()">▶️ Воспроизвести</button>
+                <button onclick="pauseMusic()">⏸️ Пауза</button>
+                <button onclick="stopMusic()">⏹️ Стоп</button>
+            </div>
             <div class="now-playing" id="nowPlaying"></div>
         </div>
     </div>
