--- a/admin-panel.html
+++ b/admin-panel.html
@@ -145,8 +145,17 @@
         <div class="section">
             <h2>Others</h2>
             <div class="buttons-grid">
+                <button class="btn" onclick="checkPage('_config.yml')">_config.yml check</button>
+                <button class="btn" onclick="checkPage('401.md')">401.md</button>
+                <button class="btn" onclick="checkPage('403.md')">403.md</button>
+                <button class="btn" onclick="checkPage('404.md')">404.md</button>
+                <button class="btn" onclick="checkPage('420.md')">420.md</button>
+                <button class="btn" onclick="checkPage('451.md')">451.md</button>
+                <button class="btn" onclick="checkPage('500.md')">500.md</button>
+                <button class="btn" onclick="checkPage('code.txt')">code.txt check</button>
+                <button class="btn" onclick="checkPage('favicon.ico')">favicon.ico check</button>
                 <button class="btn" onclick="checkPage('logo.jpeg')">logo.jpeg check</button>
-                 <button class="btn" onclick="checkPage('favicon.ico')">favicon.ico check</button>
+                <button class="btn" onclick="checkPage('style.css')">style.css check</button>
             </div>
         </div>
         <div class="section">
@@ -169,6 +178,7 @@
                 <div class="track-item" data-track="music/Korol_i_Shut-Prygnu_so_Skaly.mp3" data-name="Король и Шут - Прыгну со скалы">Прыгну со скалы (Король и Шут)</div>
                 <div class="track-item" data-track="music/Lubeh-Horse.mp3" data-name="Любэ - Конь">Конь (Любэ)</div>
                 <div class="track-item" data-track="music/Mission_Impossible-Main_Theme.mp3" data-name="Mission Impossible (Main Theme)">Main theme from Mission Impossible</div>
+                <div class="track-item" data-track="music/NFSUG-Doomsday.mp3" data-name="Need For Speed Underground: Doomsday">Doomsday (Need For Speed Underground</div>
                 <div class="track-item" data-track="music/ReLogic-Alternate_Day.mp3" data-name="Re-Logic - Alternate Day">Alternate Day (Re-Logic, Terraria)</div>
                 <div class="track-item" data-track="music/ReLogic-Dungeon.mp3" data-name="Re-Logic - Dungeon">Dungeon (Re-Logic, Terraria)</div>
                 <div class="track-item" data-track="music/ReLogic-Eclipse.mp3" data-name="Re-Logic - Eclipse">Eclipse (Re-Logic, Terraria)</div>
