--- a/index.html
+++ b/index.html
@@ -969,6 +969,7 @@
             <div class="track-item" data-track="music/Lubeh-Horse.mp3" data-name="Любэ - Конь">Конь (Любэ)</div>
             <div class="track-item" data-track="music/Manowar-Warriors_of_the_World.mp3" data-name="Manowar - Warriors of the World">Warriors of the World (Manowar)</div>
             <div class="track-item" data-track="music/Mission_Impossible-Main_Theme.mp3" data-name="Mission Impossible (Main Theme)">Main theme from Mission Impossible</div>
+            <div class="track-item" data-track="music/NFSUG-Doomsday.mp3" data-name="Need For Speed Underground: Doomsday">Doomsday (Need For Speed Underground</div>
             <div class="track-item" data-track="music/ReLogic-Alternate_Day.mp3" data-name="Re-Logic - Alternate Day">Alternate Day (Re-Logic, Terraria)</div>
             <div class="track-item" data-track="music/ReLogic-Dungeon.mp3" data-name="Re-Logic - Dungeon">Dungeon (Re-Logic, Terraria)</div>
             <div class="track-item" data-track="music/ReLogic-Eclipse.mp3" data-name="Re-Logic - Eclipse">Eclipse (Re-Logic, Terraria)</div>
